<resources>
    <string name="app_name">TipCalculatorV0</string>
    <string name="label_bill">Bill</string>
    <string name="label_trip_percent">Tip (%)</string>
    <string name="amount_bill_hint">Enter Bill</string>
    <string name="amount_tip_percent_hint">Enter Tip</string>
    <string name="lable_tip">Tip($)</string>
    <string name="total">Total</string>
    <string name="np">Number of people</string>
    <string name="np2">Total Per Person</string>
</resources>